# Netflow

./: .env  .gitignore  README.md  analyze_anomalies.py  attack_simulator.py  live_capture.py  live_capture.py.bak  main.py  main.py.bak  outLine.py  pcaJson.py  pcap_to_json.py  pyproject.toml  res.csv  sample_packet.json  sentinel_trigger_attack.py  setup.py  start_sentinel.py  system_monitor.py  testDumpWifi.pcapng  test_compile.py  test_data.jsonl  test_dyn.py  test_input.csv  test_output.csv  test_queries.jsonl  test_rag.py  test_rag_full_streaming.py  test_rag_http.py  test_rag_http_full.py  test_rag_streaming.py  test_schema.py  whitelist.json
dashboard/backend/: db.sqlite3
dashboard/backend/api/: consumers.py  urls.py  views.py
dashboard/backend/backend/: asgi.py  settings.py
dashboard/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
dashboard/frontend/src/: App.jsx  index.css
dashboard/frontend/src/components/: NetworkGraph.jsx
docs/: anomalies.csv  debug_analyzed_docs.csv  debug_flows.csv  packets.json  rag_context.csv  raw_packets.csv
features/: feature_encryption.py  feature_flow_stats.py  feature_sequence.py  feature_small_packets.py  feature_tcp_flags.py  feature_ttl.py
live_data/: stream.jsonl  stream.jsonl.bak
logs/: all_packets.csv  debug_graph_edges.csv
queries/: q1.txt
